# awr

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  cog.toml  expand.rs  fetch-avilla.sh  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml  api.yml  check.yml  cog.yml
docs/: custom.html  prism.html
examples/: gallery.py  gallery.rs  simple.py
libawr/: Cargo.toml
libawr/src/: consts.rs  device.rs  lib.rs  login.rs  message.rs  utils.rs
libawr/src/client/: account_info.rs  friend.rs  friend_group.rs  friend_list.rs  group.rs  group_member.rs  group_member_list.rs  message_receipt.rs  mod.rs
libawr/src/meta/: cache.rs  mod.rs  selector.rs
python/awr/: __init__.py  _awr.pyi  account.py  avilla.py  awr.pyi  message.py
src/: device.rs  lib.rs  login.rs  loguru.rs  utils.rs
src/client/: account_info.rs  client_impl.rs  friend.rs  friend_group.rs  friend_list.rs  group.rs  group_member.rs  group_member_list.rs  message_receipt.rs  mod.rs  structs.rs
src/message/: chain.rs  elements.rs  mod.rs
