[package]
name = "awr"
version = "0.1.0"
authors = ["忘忧北萱草<wybxc@qq.com>"]
license = "MPL-2.0"
edition = "2021"
publish = false
include = [
    "/python",
    "/src",
    "Cargo.lock",
    "pyproject.toml",
    "!__pycache__",
    "!*.so",
]

[workspace]
members = ["libawr"]

[workspace.package]
readme = "README.md"
license = "MPL-2.0"
license-file = "LICENSE"

[lib]
name = "awr"
test = false
doc = false
crate-type = ["cdylib"]

[dependencies]
libawr = { path = "libawr" }
pyo3 = { version = "0.17", features = [
    "extension-module",
    "multiple-pymethods",
    "anyhow",
    "abi3",
    "abi3-py38",
    "nightly",
] }
pyo3-asyncio = { version = "0.17", features = ["tokio-runtime"] }
pyo3-built = "0.4"
tokio = { version = "1", features = ["rt", "fs", "io-std"] }
ricq = "0.1.19"
ricq-core = "0.1"
anyhow = "1.0"
futures-util = "0.3"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }

[build-dependencies]
built = { version = "0.5", features = ["chrono"] }

[package.metadata.maturin]
name = "awr._awr"
python-source = "python"

[profile.release]
lto = true
