[package]
name = "libawr"
description = "基于 ricq 的 QQ 机器人框架，提供一致、易用、简洁的 API。"
license.workspace = true
readme.workspace = true
documentation = "https://docs.rs/libawr"
repository = "https://github.com/Wybxc/awr"
version = "0.1.3"
edition = "2021"
include = ["/src", "/docs"]

[dependencies]
ricq = "0.1.19"
ricq-core = "0.1"
tokio = { version = "1", features = ["fs", "io-std"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
tracing = "0.1"
serde_json = "1"
thiserror = "1"
bytes = "1"
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
konst = "0.3.4"
async-trait = "0.1.61"

[dev-dependencies]
anyhow = "1.0.69"
aquamarine = "0.2.2"
image = "0.24.5"
qrcode = "0.12.0"
rqrr = "0.6.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-after-content", "docs/custom.html"]
